--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "webpack-dev-server": "^4.4.0"
   },
   "devDependencies": {
-    "html-webpack-plugin": "^5.5.0"
+    "css-loader": "^6.5.1",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.4.4",
+    "sass": "^1.43.4",
+    "sass-loader": "^12.3.0",
+    "style-loader": "^3.3.1"
   }
 }
